image file type changed

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 					<div class="after">
 						<h3>After</h3>
 						<figure>
-							<img src="img/After.png" alt="After image" width="700" height="400" align="right">
+							<img src="img/After.jpg" alt="After image" width="700" height="400" align="right">
 							<br/><br/>
 							<figcaption><b>Current schematic floor plan of the school premises </b> </figcaption>
 							<br /><br />
